Added solution exo 3

--- a/Notebooks/Chap_3_Estimation.ipynb
+++ b/Notebooks/Chap_3_Estimation.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/blhuillier/2025B_AstroDataAnalysis/blob/main/Notebooks/Chap_3_Estimation.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -51,7 +51,7 @@
         "$$\n",
         "\\log L(p) = \\sum_{i=1}^{N} \\log f(x_i; p)\n",
         "= N \\log p + \\left(\\sum_{i=1}^{N} (x_i - 1)\\right) \\log (1 - p)\n",
-        "$$. \n",
+        "$$.\n",
         "2. Estimate $ \\hat{p} $ using Maximum Likelihood.  \n",
         "a.   Derive the maximum likelihood estimator $ \\hat{p}_{\\mathrm{MLE}} $.  \n",
         "b.  Then compute it from the data.  \n",
@@ -68,20 +68,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "1bXmjxctZTBF"
+      },
       "outputs": [],
       "source": [
-        "import numpy as np \n",
+        "import numpy as np\n",
         "\n",
         "# we fix the seed so that we obtain the same results everytime\n",
         "r = np.random.RandomState(seed=0)\n",
-        "# use r to generate a sample. "
+        "# use r to generate a sample."
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "Ytj9RAtmZTBG"
+      },
       "source": [
         "# Exercise II — Pareto Distribution and Estimation  \n",
         "*Adapted from Feigelson & Babu, Exercise 4.7.1*\n",
@@ -89,7 +93,7 @@
         "The Pareto law is a truncated power law. It is used to describe self-similar processes — for example, the Salpeter initial mass function (IMF). Its probability density function (PDF) is:\n",
         "\n",
         "$$\n",
-        "f(x) = \n",
+        "f(x) =\n",
         "\\begin{cases}\n",
         "\\frac{\\alpha b^\\alpha}{x^{\\alpha+1}} & \\text{if } x \\geq b \\\\\n",
         "0 & \\text{otherwise}\n",
@@ -141,7 +145,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "6NwtNh9DZTBG"
+      },
       "outputs": [],
       "source": []
     },
@@ -172,16 +178,87 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {
+        "id": "sX69JQjIZTBH",
+        "outputId": "6d069de3-8d0f-46ac-f12e-0e108ce392e7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2.5758293035489004\n",
+            "(1000, 999)\n",
+            "0.992\n"
+          ]
+        }
+      ],
+      "source": [
+        "import numpy as np\n",
+        "from scipy import stats\n",
+        "r = np.random.RandomState(0)\n",
+        "\n",
+        "alpha = 0.01\n",
+        "mu = 1.37\n",
+        "sigma = 1.12\n",
+        "\n",
+        "NN = 999\n",
+        "MM = 1000\n",
+        "\n",
+        "rv = stats.norm(loc=0,scale=1)\n",
+        "zz = rv.ppf(1-alpha/2)\n",
+        "\n",
+        "\n",
+        "\n",
+        "# check for realization 1:\n",
+        "XX = r.normal(loc=mu,scale=sigma,size=NN)\n",
+        "Xbar = XX.mean()\n",
+        "\n",
+        "print (zz)\n",
+        "\n",
+        "ll = Xbar - zz*sigma/np.sqrt(NN)\n",
+        "uu = Xbar + zz*sigma/np.sqrt(NN)\n",
+        "\n",
+        "# print (f\" Xbar = {Xbar}\")\n",
+        "# print (f\" Interval: [{ll:.4f},{uu:4f}]\")\n",
+        "# print (rf\" \\mu \\in [{ll:2f}, {uu:3f}]? {ll < mu < uu}\")\n",
+        "\n",
+        "# Now, make an (MM,NN) array of X\n",
+        "XX = r.normal(loc=mu,scale=sigma,size=MM*NN).reshape((MM,NN))\n",
+        "print (XX.shape)\n",
+        "# calculate the sample mean for the MM samples:\n",
+        "Xbar = XX.mean(axis=1)\n",
+        "\n",
+        "# for each smaple, calculate ll and uu:\n",
+        "ll = Xbar - zz*sigma/np.sqrt(NN)\n",
+        "uu = Xbar + zz*sigma/np.sqrt(NN)\n",
+        "\n",
+        "success = (mu > ll).__and__(mu < uu).sum()\n",
+        "print (success / MM)\n",
+        "# (mu>ll)\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "QjSIkjxlZZHM"
+      },
       "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "base",
