--- a/Notebooks/Chap_4_Least_Squares_exercises.ipynb
+++ b/Notebooks/Chap_4_Least_Squares_exercises.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNH9miISRK5wirUW57mmVQ7",
+      "authorship_tag": "ABX9TyNDPvGYQ87JP85naaduBKle",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d38d75e6-e6f9-4acd-f025-a49612bb024c"
+        "outputId": "ba4bcd85-78ac-4a8b-ab29-a9f5b748b5cd"
       },
       "source": [
         "filecov = \"https://raw.githubusercontent.com/PantheonPlusSH0ES/DataRelease/refs/heads/main/Pantheon%2B_Data/4_DISTANCES_AND_COVAR/Pantheon%2BSH0ES_STAT%2BSYS.cov\"\n",
@@ -75,7 +75,7 @@
         "print (np.linalg.eigvals(cov).min())\n",
         "\n"
       ],
-      "execution_count": 37,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,9 +98,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "u_nV99SHG1mf",
-        "outputId": "b2cbbbec-6818-4fb4-db81-6bbf99a4230a"
+        "outputId": "5c7484ea-3334-4b02-a062-5b16288a80f9"
       },
-      "execution_count": 38,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -177,9 +177,9 @@
           "height": 447
         },
         "id": "q8UlmyufGuZt",
-        "outputId": "d6259bea-8a80-4a87-e6d9-71c2177c174c"
+        "outputId": "54b40102-b234-4c3f-c04b-5955fddcb829"
       },
-      "execution_count": 39,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -189,7 +189,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 39
+          "execution_count": 3
         },
         {
           "output_type": "display_data",
@@ -219,9 +219,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aQtz9We6INYH",
-        "outputId": "1ebd66d5-1c5d-4295-dedf-53c34b66915b"
+        "outputId": "40a54875-cfd3-4cc9-b350-c1317c3caace"
       },
-      "execution_count": 40,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -257,17 +257,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5VkGqPxXJ3jv",
-        "outputId": "f1a21216-0214-457b-f414-77cbfc094256"
+        "outputId": "c22a54fd-7495-4747-ee98-d78590fd272e"
       },
-      "execution_count": 42,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "(10000, 1580)\n",
-            "(10000, 1580)\n",
-            "E[d_L] = 1255.8731391686404\n"
+            "(10000, 1580)\n"
           ]
         }
       ]
@@ -291,9 +290,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XnFw4JKOWQrl",
-        "outputId": "d79f8488-602b-4d61-c6ee-4f566cde8464"
+        "outputId": "769b280f-e4d6-472e-fd1c-3564a1350668"
       },
-      "execution_count": 52,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -344,12 +343,12 @@
       ],
       "metadata": {
         "id": "iotrJu-KYG3w",
-        "outputId": "51470710-5f93-46ee-ed96-e35d45af013c",
+        "outputId": "11c4527a-cfad-4467-ff2d-e29624abd2ca",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 58,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -367,12 +366,12 @@
       ],
       "metadata": {
         "id": "jC0rBzelYaTs",
-        "outputId": "ce99df27-37e7-4a3f-e30b-db4ba2f824ec",
+        "outputId": "71b1c025-b977-420f-e7b7-4818e8075865",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 59,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -397,9 +396,9 @@
           "height": 482
         },
         "id": "UO7CT0tJXVdk",
-        "outputId": "8f25d172-53d1-45be-c753-65e5587abec9"
+        "outputId": "7a754c7f-e7a2-4603-a871-f4e657112b94"
       },
-      "execution_count": 57,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -413,11 +412,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.colorbar.Colorbar at 0x7cd6136d64e0>"
+              "<matplotlib.colorbar.Colorbar at 0x7b460346b9b0>"
             ]
           },
           "metadata": {},
-          "execution_count": 57
+          "execution_count": 9
         },
         {
           "output_type": "display_data",
@@ -454,16 +453,18 @@
         "\n",
         "1. Write the system as an ordinary least square problem\n",
         "\n",
-        "2. Generate $N$ points for $X_i\\sim \\mathcal U(0,1)$\n",
+        "2. Generate $N$ points for $X_i\\sim  U(0,1)$\n",
         "\n",
         "3. Set $(a,b,c) = (1,-2,3)$, and generate the corresponding $Y_i = f(X_i) + \\varepsilon$,\n",
-        "where $\\varepsilon \\simeq \\mathcal{N}(0,0.5^2)$.\n",
+        "where $\\varepsilon \\simeq {N}(0,0.5^2)$.\n",
         "\n",
         "4. Overplot the true model and the realizations $(X_i,Y_i)$.\n",
         "\n",
         "5. Calculate the OLS solution and find the best-fit parameters $(\\hat a, \\hat b, \\hat c)$\n",
         "\n",
-        "(6. Redo the same thing assuming $\\epsilon\\sim\\mathcal{N}(0,\\mathop{\\mathrm{diag}}(\\sigma_i^2)$),\n",
+        "6. use $\\texttt{scipy.optimize}$ to find the (non-linear) Least Square Estimator, and compare with the linear case.  \n",
+        "\n",
+        "7. Redo the same thing assuming $\\epsilon\\sim {N}(0,\\mathop{\\mathrm{diag}}(\\sigma_i^2)$),\n",
         "with $\\sigma_i = 0.5 (1+X_i)$\n"
       ],
       "metadata": {
