--- a/Notebooks/Chap_5_Bayesian_exercise.ipynb
+++ b/Notebooks/Chap_5_Bayesian_exercise.ipynb
@@ -1,26 +1,13 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyP09sDKOVkMzxLafWRzgxR0",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/blhuillier/2024A_MathematicalAstronomy/blob/main/Notebooks/Chap_5_Bayesian_exercise.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/blhuillier//blob/main/Notebooks/2025B_AstroDataAnalysis/Chap_7_Bayesian_exercise.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -32,15 +19,16 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Monte-Carlo Integration"
-      ],
       "metadata": {
         "id": "clDGp3FaLJbL"
-      }
+      },
+      "source": [
+        "# Monte-Carlo Integration"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -48,6 +36,15 @@
         "id": "nHy634YakqR3",
         "outputId": "708a06c6-d5b8-4d5c-ae7a-e3b0fce9155c"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "2.0.3\n"
+          ]
+        }
+      ],
       "source": [
         "import pandas as pd\n",
         "import ssl\n",
@@ -58,16 +55,6 @@
         "\n",
         "# print (plt.rcParams)\n",
         "mycols = ['#1f77b4', '#ff7f0e', '#2ca02c', '#d62728', '#9467bd', '#8c564b', '#e377c2', '#7f7f7f', '#bcbd22', '#17becf']"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "2.0.3\n"
-          ]
-        }
       ]
     },
     {
@@ -88,12 +75,12 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "rYbNIryygKf8"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -109,51 +96,54 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### 2.1 Plot the function & guess the area"
-      ],
       "metadata": {
         "id": "PMimBDPpdGx3"
-      }
+      },
+      "source": [
+        "### 2.1 Plot the function & guess the area"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "w-U91htgdN4i"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### 2.2 Calculate it using the Monte-Carlo Method"
-      ],
       "metadata": {
         "id": "J-4T_VGlc_TX"
-      }
+      },
+      "source": [
+        "### 2.2 Calculate it using the Monte-Carlo Method"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "_c-xum5WgUhn"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# 3. Model Selection"
-      ],
       "metadata": {
         "id": "zzyJJPXhQvAk"
-      }
+      },
+      "source": [
+        "# 3. Model Selection"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "FdbZFbucQypd"
+      },
       "source": [
         "In Assignment 3, we performed MCMC on the Pantheon dataset.\n",
         "\n",
@@ -162,46 +152,56 @@
         "\n",
         "Among the following models, which model fits the Pantheon supernovae compilation better? why?\n",
         "$\\Lambda$CDM, Flat $\\Lambda$CDM, $w$CDM, Flat $w$CDM"
-      ],
-      "metadata": {
-        "id": "FdbZFbucQypd"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### 3.1 Which tools do you know can compare these models?"
-      ],
       "metadata": {
         "id": "XsbmOeApg324"
-      }
+      },
+      "source": [
+        "### 3.1 Which tools do you know can compare these models?"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "ctvtQnkUhcQM"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## 3.2 Calculate them and rank the models."
-      ],
       "metadata": {
         "id": "_M9DEo_UhCQj"
-      }
+      },
+      "source": [
+        "## 3.2 Calculate them and rank the models."
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "iOtusNL9hDzf"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyP09sDKOVkMzxLafWRzgxR0",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
