--- a/Notebooks/Chap_7_Bayesian_exercise.ipynb
+++ b/Notebooks/Chap_7_Bayesian_exercise.ipynb
@@ -160,11 +160,11 @@
         "print (f\" MC method: {I_MC:.3f}; %err = {100*(I_MC/truth-1):.3f}%\")"
       ],
       "metadata": {
-        "id": "ltmrzIMRFiF8",
-        "outputId": "c4e54958-b288-493b-f24d-d9d69209877d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ltmrzIMRFiF8",
+        "outputId": "c4e54958-b288-493b-f24d-d9d69209877d"
       },
       "execution_count": 231,
       "outputs": [
@@ -365,10 +365,11 @@
         "\\frac{d_M(z)}{r_d}, \\frac {d_H}{r_d}, \\mathrm{ where}\\\\\n",
         "d_H(z) & = \\frac {c}{H(z)}, \\\\\n",
         "d_M(z) & = \\int_0^z \\frac {c}{H(z')} \\mathrm d z'\\\\\n",
-        "H^2(z) & = H_0^2 (\\Omega_m (1+z)^3 + (1-\\Omega_m).\n",
+        "H^2(z) & = H_0^2 (\\Omega_m (1+z)^3 + 1-\\Omega_m).\n",
         "\\end{align}$\n",
         "\n",
-        "We will assume that $r_d = 1\\, \\mathrm{Mpc}$.\n",
+        "For simplicity, we will assume $r_d$ to be known:\n",
+        "$r_d = 1\\, \\mathrm{Mpc}$.\n",
         "\n",
         "\n",
         "1. Use the Astropy.cosmology class to write the likelihood for the Flat-LCDM model.  \n",
@@ -1123,11 +1124,11 @@
         "# (nwalkers, niter, ndim)"
       ],
       "metadata": {
-        "id": "J5695kuJ8tSk",
-        "outputId": "210052ec-ccc7-45b9-ed92-4f8c06c81dc7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "J5695kuJ8tSk",
+        "outputId": "210052ec-ccc7-45b9-ed92-4f8c06c81dc7"
       },
       "execution_count": 239,
       "outputs": [
@@ -1147,11 +1148,11 @@
         "print (sampler.acceptance_fraction)"
       ],
       "metadata": {
-        "id": "DippWzVDLFYu",
-        "outputId": "e4e899f8-c27d-484a-c5ae-62dbeff4bd9d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "DippWzVDLFYu",
+        "outputId": "e4e899f8-c27d-484a-c5ae-62dbeff4bd9d"
       },
       "execution_count": 240,
       "outputs": [
@@ -1173,11 +1174,11 @@
         "print (chains)"
       ],
       "metadata": {
-        "id": "iXlm7FQwLJdi",
-        "outputId": "1ed5299c-db2d-48ab-e8ef-b0202e3ac320",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "iXlm7FQwLJdi",
+        "outputId": "1ed5299c-db2d-48ab-e8ef-b0202e3ac320"
       },
       "execution_count": 241,
       "outputs": [
@@ -1224,12 +1225,12 @@
         "c.plotter.plot_walks(plot_weights=False)"
       ],
       "metadata": {
-        "id": "C2F6z2QZNtS6",
-        "outputId": "9cac3376-b58e-4dd4-af89-8fef366a03d5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 537
-        }
+        },
+        "id": "C2F6z2QZNtS6",
+        "outputId": "9cac3376-b58e-4dd4-af89-8fef366a03d5"
       },
       "execution_count": 245,
       "outputs": [
@@ -1263,12 +1264,12 @@
         "c.plotter.plot()"
       ],
       "metadata": {
-        "id": "moFEfCWcSSRj",
-        "outputId": "1789ddba-3c21-4dc0-9d5a-bb73ae2c5902",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "moFEfCWcSSRj",
+        "outputId": "1789ddba-3c21-4dc0-9d5a-bb73ae2c5902"
       },
       "execution_count": 247,
       "outputs": [
@@ -1322,12 +1323,12 @@
         "\n"
       ],
       "metadata": {
-        "id": "vxLjGP6fSQj0",
-        "outputId": "b9acde4b-ed24-4eac-a289-4cdd69bf926c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 527
-        }
+        },
+        "id": "vxLjGP6fSQj0",
+        "outputId": "b9acde4b-ed24-4eac-a289-4cdd69bf926c"
       },
       "execution_count": 250,
       "outputs": [
@@ -1361,12 +1362,12 @@
         "c.plotter.plot()"
       ],
       "metadata": {
-        "id": "LDmrTZu3S6nm",
-        "outputId": "dd0a8b91-9b86-4dcd-dba4-368867deeafc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "LDmrTZu3S6nm",
+        "outputId": "dd0a8b91-9b86-4dcd-dba4-368867deeafc"
       },
       "execution_count": 249,
       "outputs": [
@@ -1417,7 +1418,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMG95NorGMWzgyn5ZpArsxm",
+      "authorship_tag": "ABX9TyN/Zq+TI9pjg4RVELLmMWcc",
       "include_colab_link": true
     },
     "kernelspec": {
